# DetourHooking

./: CMakeLists.txt  README.md
Example/: CMakeLists.txt  Common.hpp  Main.cpp  Manual.cpp  RefCounted.cpp
Example/Source/: Main.cpp
Include/: DetourHooking.hpp
Source/: DetourHooking.cpp  Hook.cpp  MemoryPage.cpp  MemoryPage.hpp  RefCountedHook.cpp  Utils.cpp  Utils.hpp
include/: DetourHooking.hpp
